src/components/toolbar/editor.scss
.is-sidebar-opened {
	.maxi-toolbar__popover {
		left: 0 !important;
		width: calc(100% - 300px);
		transform-origin: bottom center !important;
	}
}
.maxi-toolbar__popover {
	z-index: 29;
	left: 0 !important;
	width: 100%;
	transform-origin: bottom center !important;
	&--has-breadcrumb {
		.components-popover__content {
			.toolbar-wrapper {
				top: -35px !important;
			}
		}
	}
	.components-popover__content {
		background-color: transparent;
		border: none;
		overflow: visible;
		box-shadow: none;
		.toolbar-wrapper {
			display: flex;
			width: min-content;
			position: relative;
			top: -10px;
			left: 50%;
			transform: translateX(-50%);
			box-shadow: 0px 6px 6px 0 rgb(0 0 0 / 16%);
			border-radius: 0;
			border: 1px solid var(--maxi-grey-1-color);

			&.icon-toolbar {
				top: 5px;
			}

			& > div:not(.toolbar-block-custom-label):first-child {
				border-top-left-radius: 5px;
				border-bottom-left-radius: 5px;
				padding-left: 2px;
			}
			.toolbar-block-custom-label {
				font-size: 10px;
				font-weight: 400;
				background: var(--maxi-primary-color);
				color: #fff;
				width: auto;
				display: inline-block;
				padding: 4px 10px;
				border-radius: 3px;
				position: absolute;
				bottom: -25px;
				left: 0;
				font-family: 'Roboto', sans-serif !important;
				line-height: 100%;

				& + .toolbar-item {
					padding-left: 2px;
				}
				&__block-style {
					text-transform: capitalize;
				}
			}
			@at-root .rtl #{&} {
				flex-direction: row-reverse;
			}
			button:focus {
				outline: none;
				box-shadow: none;
			}
			> div:not(.toolbar-block-custom-label),
			> button {
				width: 2rem;
				height: 2rem;
				background-color: #fff;
				padding: 0;
				cursor: pointer;
				border-radius: 0;
				position: relative;
				padding-right: 0;
				border-right: 1px solid var(--maxi-grey-1-color);
				// &:after {
				// 	content: '';
				// 	position: absolute;
				// 	top: 50%;
				// 	right: 0;
				// 	width: 1px;
				// 	height: 100%;
				// 	background-color: var(--maxi-grey-1-color);
				// 	transform: translateY(-50%);
				// 	padding-left: 2px;
				// }
				&.toolbar-item__help,
				&.toolbar-item__more-settings {
					border-right: none;
				}
				&:last-child {
					&:after {
						content: none;
					}
				}
			}
			.toolbar-item {
				display: flex;
				align-items: center;
				justify-content: center;

				&__link {
					&--active {
						.toolbar-item__icon {
							path {
								fill: var(--maxi-primary-color);
							}
						}
					}
				}
				&__text-options,
				&__border {
					.toolbar-item__icon {
						display: flex;
						justify-content: center;
						align-items: center;
						// svg {
						// 	width: 10px;
						// 	height: auto;
						// }
					}
				}
				&__more-settings .components-button,
				&__help .components-button,
				&__duplicate .components-button,
				&__move,
				&__button {
					width: 100%;
					height: 100%;
					padding: 0;
					transition: 0.3s;
					border-radius: 0;
					&::after {
						content: '';
						display: block;
						background-color: var(--maxi-secondary-color);
						height: 0;
						position: absolute;
						bottom: -1px;
						left: -1px;
						right: -1px;
						transition: 0.2s;
					}
					&:hover,
					&[aria-expanded='true'] {
						background-color: #eaf2f6;
						&::after {
							height: 2px;
						}
						.toolbar-item__icon {
							ellipse,
							circle,
							line,
							rect,
							polyline,
							path {
								fill: var(--maxi-secondary-color);
							}
						}
					}
					&:focus,
					&:visited {
						box-shadow: none;
						outline: 0;
					}
				}
				&__replace-image {
					width: 80px !important;
					.components-button {
						font-weight: 700;
						display: inline-block;
					}
				}
				&__icon {
					ellipse,
					circle,
					line,
					rect,
					polyline,
					path {
						transition: 0.3s;
						fill: #000;
						stroke: transparent;
						// stroke-width: 1.3px;
					}
					display: block;
					width: 1rem;
					height: 1rem;
					margin: auto;
					fill: var(--maxi-black-1-color);
				}
				&__move {
					cursor: move;
				}
			}
		}
	}
}

body .is-sidebar-opened {
	~ .popover-slot {
		.toolbar-item__popover {
			left: 0 !important;
			width: calc(100% - 300px);
			transform-origin: bottom center !important;
		}
	}
}
/* ... */

